[gd_scene load_steps=2 format=3 uid="uid://cauyh64a118cr"]

[ext_resource type="Script" path="res://new_script.gd" id="1_68rf8"]

[node name="Main" type="Node"]

[node name="Timer" type="Timer" parent="."]
autostart = true
script = ExtResource("1_68rf8")

[connection signal="leveled_up" from="Timer" to="Timer" method="_on_leveled_up"]
[connection signal="timeout" from="Timer" to="Timer" method="_on_timeout"]
